--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-Hello World!
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>CSCE190 Wyatt Wilgus</title>
+    </head>
+    <body>
+        <h1>Wyatt Wilgus's CSCE190 Site</h1>
+    </body>
+</html>
