--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
     </head>
     <body>
         <h1>Wyatt Wilgus's CSCE190 Site</h1>
+        <a href="">https://www.youtube.com/watch?v=DLzxrzFCyOs</a>
     </body>
 </html>
