--- a/index.html
+++ b/index.html
@@ -5,6 +5,18 @@
     </head>
     <body>
         <h1>Wyatt Wilgus's CSCE190 Site</h1>
-        <a href="https://www.youtube.com/watch?v=DLzxrzFCyOs">Costom Text</a>
+        
+        <section class = "assignment">
+            <a href="files/ProblemStatement.pdf"><img src="images/ProblemStatement.png"></a>
+            <section class = "ass-details">
+                <a href="files/ProblemStatement.pdf"><h2>Problem Statement: Calorie Tracker</h2></a>
+                <p>
+                    Our users are not properly keeping track of how many calories they are taking in each day. Most
+users don’t have time to manually keep track of how much they are eating. Our solution will help
+users by tracking their caloric intake automatically
+                </p>
+            </section>
+        </section>
+
     </body>
 </html>
