--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <h1>Wyatt Wilgus's CSCE190 Site</h1>
         
         <section class = "assignment">
-            <a href="files/ProblemStatement.pdf"><img src="images/ProblemStatement.png"></a>
+            <a href="files/ProblemStatement.pdf"><img src="images/ProblemStatement.PNG"></a>
             <section class = "ass-details">
                 <a href="files/ProblemStatement.pdf"><h2>Problem Statement: Calorie Tracker</h2></a>
                 <p>
