--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html>
     <head>
         <title>CSCE190 Wyatt Wilgus</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <h1>Wyatt Wilgus's CSCE190 Site</h1>
         
+        <!-- Problem Statement Assignment -->
         <section class = "assignment">
             <a href="files/ProblemStatement.pdf"><img src="images/ProblemStatement.PNG"></a>
             <section class = "ass-details">
@@ -18,5 +20,15 @@ users by tracking their caloric intake automatically
             </section>
         </section>
 
+        <!-- Affinity Diagram Assignment -->
+        <section class = "assignment">
+            <a href="files/AffinityDiagram.pdf"><img src="images/AffinityDiagram.png"></a>
+            <section class = "ass-details">
+                <a href="files/AffinityDiagram.pdf"><h2>Affinity Diagram: Calorie Tracker</h2></a>
+                <p>
+                    Our team created this diagram to brainstorm ideas for our calorie tracker.
+                </p>
+            </section>
+        </section>
     </body>
 </html>
