--- a/index.html
+++ b/index.html
@@ -30,5 +30,16 @@ users by tracking their caloric intake automatically
                 </p>
             </section>
         </section>
+
+        <!-- Personas Assignment -->
+        <section class = "assignment">
+            <a href="files/Personas.pdf"><img src="images/Personas.png"></a>
+            <section class = "ass-details">
+                <a href="files/Personas.pdf"><h2>Personas: Five Personas for Calorie Tracker</h2></a>
+                <p>
+                    Each membe rof our team created a persona of a potential user of our app.
+                </p>
+            </section>
+        </section>
     </body>
 </html>
