--- a/index.html
+++ b/index.html
@@ -37,7 +37,18 @@ users by tracking their caloric intake automatically
             <section class = "ass-details">
                 <a href="files/Personas.pdf"><h2>Personas: Five Personas for Calorie Tracker</h2></a>
                 <p>
-                    Each membe rof our team created a persona of a potential user of our app.
+                    Each member of our team created a persona of a potential user of our app.
+                </p>
+            </section>
+        </section>
+
+        <!-- Sketches Assignment -->
+        <section class = "assignment">
+            <a href="files/Sketches.pdf"><img src="images/Sketches.PNG"></a>
+            <section class = "ass-details">
+                <a href="files/Sketches.pdf"><h2>Personas: Five Sketches</h2></a>
+                <p>
+                    Each member of our team created sketches of what the app should look like.
                 </p>
             </section>
         </section>
