--- a/index.html
+++ b/index.html
@@ -7,50 +7,62 @@
     <body>
         <h1>Wyatt Wilgus's CSCE190 Site</h1>
         
-        <!-- Problem Statement Assignment -->
-        <section class = "assignment">
-            <a href="files/ProblemStatement.pdf"><img src="images/ProblemStatement.PNG"></a>
-            <section class = "ass-details">
+        <div class="assignments">
+            <!-- Problem Statement Assignment -->
+            <section class = "assignment">
                 <a href="files/ProblemStatement.pdf"><h2>Problem Statement: Calorie Tracker</h2></a>
+                <a href="files/ProblemStatement.pdf"><img src="images/ProblemStatement.PNG"></a>
                 <p>
                     Our users are not properly keeping track of how many calories they are taking in each day. Most
-users don’t have time to manually keep track of how much they are eating. Our solution will help
-users by tracking their caloric intake automatically
+                users don’t have time to manually keep track of how much they are eating. Our solution will help
+                users by tracking their caloric intake automatically
                 </p>
             </section>
-        </section>
 
-        <!-- Affinity Diagram Assignment -->
-        <section class = "assignment">
-            <a href="files/AffinityDiagram.pdf"><img src="images/AffinityDiagram.png"></a>
-            <section class = "ass-details">
+            <!-- Affinity Diagram Assignment -->
+            <section class = "assignment">
                 <a href="files/AffinityDiagram.pdf"><h2>Affinity Diagram: Calorie Tracker</h2></a>
+                <a href="files/AffinityDiagram.pdf"><img src="images/AffinityDiagram.png"></a>
                 <p>
                     Our team created this diagram to brainstorm ideas for our calorie tracker.
                 </p>
             </section>
-        </section>
 
-        <!-- Personas Assignment -->
-        <section class = "assignment">
-            <a href="files/Personas.pdf"><img src="images/Personas.png"></a>
-            <section class = "ass-details">
+            <!-- Personas Assignment -->
+            <section class = "assignment">
                 <a href="files/Personas.pdf"><h2>Personas: Five Personas for Calorie Tracker</h2></a>
+                <a href="files/Personas.pdf"><img src="images/Personas.png"></a>
                 <p>
                     Each member of our team created a persona of a potential user of our app.
                 </p>
             </section>
-        </section>
 
-        <!-- Sketches Assignment -->
-        <section class = "assignment">
-            <a href="files/Sketches.pdf"><img src="images/Sketches.PNG"></a>
-            <section class = "ass-details">
+            <!-- Sketches Assignment -->
+            <section class = "assignment">
                 <a href="files/Sketches.pdf"><h2>Personas: Five Sketches</h2></a>
+                <a href="files/Sketches.pdf"><img src="images/Sketches.PNG"></a>
                 <p>
                     Each member of our team created sketches of what the app should look like.
                 </p>
             </section>
-        </section>
+
+            <!-- Hi-Fi Prototype Assignment -->
+            <section class = "assignment">
+                <a href="files/Hi-Fi-Prototype/index.html"><h2>Hi-Fi Prototype: Calorie Tracker</h2></a>
+                <a href="files/Hi-Fi-Prototype/index.html"><img src="images/HiFiPrototype.png"></a>
+                <p>
+                    A high fidelity prototype to demonstrate how the Calorie Tracker App would work.
+                </p>
+            </section>
+
+            <!-- Final Presentation Assignment -->
+            <section class = "assignment">
+                <a href="https://youtu.be/sBcmAyvy4Bkl"><h2>Final Presentation</h2></a>
+                <a href="https://youtu.be/sBcmAyvy4Bk"><img src="images/HiFiPrototype.png"></a>
+                <p>
+                    An active demonstration of how our high fidelity prototype works.
+                </p>
+            </section>
+        </div>
     </body>
 </html>
